Add dependency info
This way a simple `npm install` is all it takes to get all the packages
you need.

--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
     "name": "spider",
     "main": "index.html",
     "description": "crawl the internets",
-    "version": "0.1.0"
+    "version": "0.1.0",
+    "dependencies": {
+        "simplecrawler": ">=0.2.9"
+    }
 }
